--- a/main.css
+++ b/main.css
@@ -1,7 +1,12 @@
+*{
+    margin: 0; /*Removes margin*/
+}
+
 html {
     background: #e6e9e9;
     background-image: linear-gradient(270deg, rgb(230, 233, 233) 0%, rgb(216, 221, 221) 100%);
     -webkit-font-smoothing: antialiased;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -17,17 +22,28 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #222;
+    color:black;
     font-weight: 600;
     line-height: 1.3;
+    text-align: center;
 }
 
 h2 {
     margin-top: 1.3em;
+    text-decoration-skip: spaces;
 }
 
-a {
-    color: #0083e8;
+h3 {
+    text-align: left;
+}
+
+p {
+    color: blue;
+    text-align: center;
+}
+
+ul {
+    color:black;
 }
 
 b, strong {
