fixing words and looks of it all

--- a/main.css
+++ b/main.css
@@ -42,6 +42,16 @@ p {
     text-align: center;
 }
 
+p2 {
+    color: black;
+    text-align: center;
+}
+
+p3 {
+    color: black;
+    text-align: center;
+}
+
 ul {
     color:black;
 }
