--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ body {
     padding: 2em 2em 4em;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3 {
     color:black;
     font-weight: 600;
     line-height: 1.3;
