--- a/main.css
+++ b/main.css
@@ -4,21 +4,21 @@
 
 html {
     background: #e6e9e9;
-    background-image: linear-gradient(270deg, rgb(230, 233, 233) 0%, rgb(216, 221, 221) 100%);
+    /* background-image: linear-gradient(270deg, rgb(230, 233, 233) 0%, rgb(216, 221, 221) 100%); */
     -webkit-font-smoothing: antialiased;
     scroll-behavior: smooth;
 }
 
 body {
-    background: #fff;
+    /* background: #fff; */
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.06);
     color: #545454;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 16px;
+    font-size: 20px;
     line-height: 1.5;
     margin: 0 auto;
-    max-width: 800px;
-    padding: 2em 2em 4em;
+    /* max-width: 800px; */
+    padding: 2em 2em 2em, 1em;
 }
 
 h1, h2, h3 {
@@ -33,13 +33,13 @@ h2 {
     text-decoration-skip: spaces;
 }
 
-h3, h4 {
+h3, h4, h5 {
     text-align: left;
+    padding-left: 1em;
 }
 
 h5 {
     color: darkblue;
-    text-align: center;
 }
 
 p {
@@ -65,7 +65,7 @@ b, strong {
     font-weight: 600;
 }
 
-samp {
+/* samp {
     display: none;
 }
 
@@ -88,4 +88,13 @@ img {
         -webkit-filter: grayscale(0%);
         filter: grayscale(0%);
     }
+} */
+
+.container{
+    height: 100vh;
+    width: auto;
+    background-image: linear-gradient(270deg, rgb(230, 233, 233) 0%, rgb(216, 221, 221) 100%);
+    background-position: center;
+    background-size: cover;
+    position: relative;
 }
