more changes to the headers

--- a/main.css
+++ b/main.css
@@ -33,13 +33,16 @@ h2 {
     text-decoration-skip: spaces;
 }
 
-h3, h4, h5 {
-    text-align: left;
-    padding-left: 1em;
+h3, h4 {
+    text-align: center;
+    display:inline-flex;
+    padding-top: 1em;
 }
 
 h5 {
     color: darkblue;
+    text-align: left;
+    padding-bottom: 1em;
 }
 
 p {
@@ -63,6 +66,10 @@ ul {
 
 b, strong {
     font-weight: 600;
+}
+
+li {
+    text-align: justify;
 }
 
 /* samp {
