--- a/main.css
+++ b/main.css
@@ -97,7 +97,7 @@ img {
 } */
 
 .container{
-    height: 100vh;
+    height:100%;
     width: auto;
     background-image: linear-gradient(270deg, rgb(230, 233, 233) 0%, rgb(216, 221, 221) 100%);
     background-position: center;
