--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ body {
     padding: 2em 2em 2em, 1em;
 }
 
-h1, h2, h3 {
+h1, h2, h3, .showClass {
     color:black;
     font-weight: 600;
     line-height: 1.3;
@@ -35,9 +35,11 @@ h2 {
 
 h3 {
     text-align: center;
+    align-self:center;
 }
 
 h4 {
+    color: darkcyan;
     text-align: center;
     padding-top: 1em;
 }
@@ -45,6 +47,7 @@ h4 {
 h5 {
     color: darkblue;
     text-align: center;
+    text-size-adjust: auto;
 }
 
 p {
@@ -60,6 +63,17 @@ p2 {
 p3 {
     color: black;
     text-align: center;
+}
+
+.showClass {
+    color: #000000;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 27px;
+    margin: 2% 1%;
+    /* max-width: 800px; */
+    padding: 2em 2em 2em, 3em;
+    background-color: transparent;
+    border: 0;
 }
 
 ul {
@@ -112,4 +126,24 @@ img {
     background-position: center;
     background-size: cover;
     position: relative;
+}
+
+.myWork{
+    text-align: center;
+}
+
+nav {
+    flex: 1;
+    padding: 60px;
+}
+
+nav h4 h3 {
+    text-decoration: none;
+    display: inline-block;
+    list-style: none;
+}
+
+nav .showClass {
+    display: inline-block;
+    align-items: center;
 }
