--- a/main.css
+++ b/main.css
@@ -38,6 +38,10 @@ h3 {
     align-self:center;
 }
 
+h4, h5 {
+    animation: colorize 1s cubic-bezier(0, 0, .78, .36) 1;
+}
+
 h4 {
     color: darkcyan;
     text-align: center;
@@ -66,6 +70,7 @@ p3 {
 }
 
 .showClass {
+    animation: colorize 1s cubic-bezier(0, 0, .78, .36) 1;
     color: #000000;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 27px;
@@ -94,7 +99,7 @@ samp {
 }
 
 img {
-    animation: colorize 3s cubic-bezier(0, 0, .78, .36) 1;
+    animation: colorize 1s cubic-bezier(0, 0, .78, .36) 1;
     background: transparent;
     border: 10px solid rgba(0, 0, 0, 0.12);
     border-radius: 4px;
@@ -112,14 +117,17 @@ img {
     0% {
         -webkit-filter: grayscale(100%);
         filter: grayscale(100%);
+        opacity: 0%;
     }
     100% {
         -webkit-filter: grayscale(0%);
         filter: grayscale(0%);
+        opacity: 100%;
     }
 }
 
-.container{
+.container {
+    animation: colorize 1s cubic-bezier(0, 0, .78, .36) 1;
     height:100%;
     width: auto;
     background-image: linear-gradient(270deg, rgb(230, 233, 233) 0%, rgb(216, 221, 221) 100%);
@@ -128,8 +136,13 @@ img {
     position: relative;
 }
 
-.myWork{
+.myWork {
+    /* opacity: 0; */
     text-align: center;
+}
+
+.worksList {
+    text-justify: auto;
 }
 
 nav {
