--- a/main.css
+++ b/main.css
@@ -4,13 +4,13 @@
 
 html {
     background: #e6e9e9;
-    /* background-image: linear-gradient(270deg, rgb(230, 233, 233) 0%, rgb(216, 221, 221) 100%); */
+    background-image: linear-gradient(270deg, rgb(75, 99, 99) 0%, rgb(216, 221, 221) 100%);
     -webkit-font-smoothing: antialiased;
     scroll-behavior: smooth;
 }
 
 body {
-    /* background: #fff; */
+    background: #fff;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.06);
     color: #545454;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -92,7 +92,7 @@ ul {
     text-align: center;
 }
 
-ul p2:hover{
+ul p2 a:hover{
     font-size: 120%;
 }
 
@@ -140,7 +140,7 @@ img {
     animation: colorize 1s cubic-bezier(0, 0, .78, .36) 1;
     height:100%;
     width: auto;
-    background-image: linear-gradient(270deg, rgb(230, 233, 233) 0%, rgb(216, 221, 221) 100%);
+    background-image: linear-gradient(270deg, rgb(230, 233, 233) 0%, rgb(128, 243, 243) 100%);
     background-position: center;
     background-size: cover;
     position: relative;
