--- a/main.css
+++ b/main.css
@@ -25,10 +25,6 @@ body {
     text-justify: auto;
 }
 
-title {
-    padding-top: 50%;
-}
-
 h1, h2, h3, .showClass {
     color:black;
     font-weight: 600;
@@ -99,12 +95,11 @@ p3 {
     color:blue;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 27px;
-    margin: 2% 1%;
-    /* max-width: 800px; */
     padding: 2em 2em 2em, 3em;
     background-color: transparent;
     border: 0;
     align-content: center;
+    font-weight: 600;
 }
 
 ul input:hover{
@@ -185,37 +180,6 @@ img {
     text-align: justify;
     text-justify: auto;
     display: none;
-}
-
-.worksList {
-    flex: 100;
-    padding: 20px;
-    align-content: center;
-    text-align: justify;
-    text-justify: auto;
-    justify-self: center;
-}
-
-.worksList h2 {
-    align-content: center;
-    text-align: center;
-}
-
-.worksList p {
-    align-content: center;
-    text-align: center;
-}
-
-.worksList h4 h3 {
-    text-decoration: none;
-    display: flex;
-    list-style:square;
-}
-
-.worksList button {
-    display:contents;
-    align-items: center;
-    text-align: center;
 }
 
 h2 input:hover{
