--- a/main.css
+++ b/main.css
@@ -31,6 +31,7 @@ h1, h2, h3, .showClass {
     text-align: center;
     align-content: center;
     font-family: sans-serif;
+    text-decoration: none;
 }
 
 h1 {
@@ -76,6 +77,7 @@ h3 {
 
 h4, h5 {
     animation: colorize 1s cubic-bezier(0, 0, .78, .36) 1;
+    text-decoration: none;
 }
 
 h4 {
@@ -91,7 +93,13 @@ h5 {
 }
 
 h5 a:hover{
-    font-size: 120%;
+    /* font-size: 120%; */
+    text-decoration:wavy;
+    color: 'red';
+}
+
+p, p2, p3 {
+    text-decoration: none;
 }
 
 p {
@@ -101,7 +109,8 @@ p {
 }
 
 p a:hover{
-    font-size: 120%;
+    /* font-size: 120%; */
+    color: 'red';
 }
 
 p2 {
@@ -129,16 +138,19 @@ p3 {
 }
 
 ul input:hover{
-    font-size: 200%;
+    /* font-size: 200%; */
+    color: springgreen;
 }
 
 ul {
     color:black;
     text-align: center;
+    text-decoration: none;
 }
 
 ul p2 a:hover{
-    font-size: 120%;
+    /* font-size: 120%; */
+    color: 'red';
 }
 
 b, strong {
@@ -209,7 +221,9 @@ img {
 }
 
 h2 input:hover{
-    font-size: 120%;
+    /* font-size: 120%; */
+    text-decoration: underline;
+    letter-spacing: 1px;
 }
 
 @supports (text-shadow: none) {
@@ -221,5 +235,6 @@ h2 input:hover{
 }
 
 p2 a:hover {
-    font-size: 120%;
+    /* font-size: 120%; */
+    text-decoration: springgreen;
 }
