--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@ body {
     align-content: center;
     text-align: justify;
     text-justify: auto;
+    word-wrap: break-word;
 }
 
 h1, h2, h3, .showClass {
