--- a/main.css
+++ b/main.css
@@ -80,6 +80,7 @@ h3 {
 h4, h5 {
     animation: colorize 1s cubic-bezier(0, 0, .78, .36) 1;
     text-decoration: none;
+    text-align: center;
 }
 
 h4 {
@@ -96,6 +97,8 @@ h5 {
 
 p, p2, p3 {
     text-decoration: none;
+    text-align: center;
+    text-size-adjust: auto;
 }
 
 p {
@@ -129,8 +132,7 @@ p3 {
     font-weight: 600;
     word-wrap: break-word;
     word-break: keep-all;
-    max-width: auto;
-    max-height: 30%;
+    max-width: 90%;
 }
 
 ul {
