--- a/main.css
+++ b/main.css
@@ -96,6 +96,8 @@ h5 {
 }
 
 p, p2, p3 {
+    animation: colorize 1s cubic-bezier(0, 0, .78, .36) 1;
+    font-weight: bold;
     text-decoration: none;
     text-align: center;
     text-size-adjust: auto;
@@ -115,7 +117,7 @@ p2 {
 }
 
 p3 {
-    color: black;
+    color:indigo;
     text-align: center;
 }
 
@@ -222,7 +224,7 @@ img {
 
 /* hovers */
 
-h2 input:hover, h5 a:hover, p a:hover, p2 a:hover {
+h2 input:hover, h3 a:hover, h5 a:hover, p a:hover, p2 a:hover {
     text-decoration: underline;
     letter-spacing: 2px;
 }
