--- a/main.css
+++ b/main.css
@@ -75,6 +75,7 @@ h2 {
 h3 {
     text-align: center;
     align-self:center;
+    padding-top: 1em;
 }
 
 h4, h5 {
@@ -84,13 +85,13 @@ h4, h5 {
 }
 
 h4 {
-    color: rgb(104, 42, 0);
+    color: rgb(255, 0, 0);
     text-align: center;
     padding-top: 1em;
 }
 
 h5 {
-    color: darkblue;
+    color: rgb(89, 0, 255);
     text-align: center;
     text-size-adjust: auto;
 }
